--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.3",
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.3.4",
+    "mysql2": "^3.3.0",
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
